objects/Contract_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Contract Attachments</relationshipLabel>
        <relationshipName>Contract_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>1. Rough Drafts/Supporting Documents</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2. Final Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Signed Document(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Attachment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Attachments</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>